--- a/public-1/index.html
+++ b/public-1/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <nav role="navigation"
+        class="flex justify-between items-center h-16 bg-gradient-to-r from-purple-700 to-purple-600 relative">
+        <a href="index.html" class="pl-6">CIRC</a>
+        <div class="px-4 cursor-pointer md:hidden" id="bars"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg></div>
+        <div class="hidden md:block" id="menu">
+            <a href="index.html" class="p-4">Home</a>
+            <a href="about.html" class="p-4">About</a>
+            <a href="contact.html" class="p-4">Contact</a>
+        </div>
+    </nav>
     <script src="app.js"></script>
 </body>
 
