--- a/public-1/index.html
+++ b/public-1/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav role="navigation"
-        class="flex justify-between items-center h-16 bg-gradient-to-r from-purple-700 to-purple-600 relative">
+        class="flex justify-between items-center h-16 bg-gradient-to-r from-red-700 to-white-600 relative">
         <a href="index.html" class="pl-6">CIRC</a>
         <div class="px-4 cursor-pointer md:hidden" id="bars"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8"
                 fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -23,6 +23,20 @@
             <a href="contact.html" class="p-4">Contact</a>
         </div>
     </nav>
+    <!-- Hero Section -->
+    <div class="bg-no-repeat h-screen bg-center bg-cover flex justify-center items-center"
+        style="background-image: url('/public-1/images/cathy-pham-3jAN9InapQI-unsplash.jpg')">
+        <div class="text-center font-bold">
+            <h1 class="lg:text-9xl sm:text-6xl text-4xl mb-10 text-white hover:text-white duration-300">Choose your
+                workout</h1>
+            <a class="text-white text-xl flex justify-center items-center transform hover:scale-110 duration-300">Explore
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-2" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                </svg></a>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
